Uppdaterat marina MF-frekvenser.

--- a/tex/body-hf.tex
+++ b/tex/body-hf.tex
@@ -109,11 +109,10 @@ Kom ihåg att inte överskrida effektbegränsningarna bara.
 
 \subsection{Amatörradiofrekvenser HF}
 
-\section{Frekvenser Amatörradio LF/MF/HF}
-\subsection{Bandplaner LF/MF/HF}
 Alla frekvenser i kHz, bandbredder i Hz.
 
 \subsubsection{Bandplan 2.2\,km, 135,7--137,8\,kHz}
+
 \begin{tabular}{rrrll}
 \textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 135,7 & 135,8 & 200 & CQ, QRSS, Digi & OBS! Högsta effekt 1W ERP. \\ \hline
@@ -269,26 +268,28 @@ Alla frekvenser i kHz, bandbredder i Hz.
 \normalsize
 
 
-\todo{Beskriva bandegenskaperna}
+%\todo{Beskriva bandegenskaperna}
+%
+%\subsection{Bandens olika egenskaper}
+%
+%Även om man kan säga att alla kortvågsbanden har liknande egenskaper så är
+%skillnaderna bland dem ofta påtagliga och eftersom det spänner över ett relativt
+%stor område då 160 till 6 meter brukar räknas som HF även om det strikt räknat
+%är VHF liksom 160 metersbandet som egentligen faller inom mellanvågsdelen eller
+%den så kallade gränsvågen så är de band som oftast förekommer på radiotapparater
+%för kortvåg så därför är de med här.
+%
+%\subsubsection{160 \& 80 metersbanden}
+%
+%\subsubsection{40 metersbandet}
+%
+%\subsubsection{20 \& 17 metersbanden}
+%
+%\subsubsection{15 \& 12 metersbanden}
+%
+%\subsubsection{6 metersbandet}
 
-\subsection{Bandens olika egenskaper}
-
-Även om man kan säga att alla kortvågsbanden har liknande egenskaper så är
-skillnaderna bland dem ofta påtagliga och eftersom det spänner över ett relativt
-stor område då 160 till 6 meter brukar räknas som HF även om det strikt räknat
-är VHF liksom 160 metersbandet som egentligen faller inom mellanvågsdelen eller
-den så kallade gränsvågen så är de band som oftast förekommer på radiotapparater
-för kortvåg så därför är de med här.
-
-\subsubsection{160 \& 80 metersbanden}
-
-\subsubsection{40 metersbandet}
-
-\subsubsection{20 \& 17 metersbanden}
-
-\subsubsection{15 \& 12 metersbanden}
-
-\subsubsection{6 metersbandet}
+\clearpage %%% Layout
 
 \subsection{JOTA---Jamboree on the air, scoutfrekvenser}
 
@@ -330,6 +331,8 @@ frekvenserna och det är också vanligt att man hör dem på helt andra
 frekvenser. De frekvenser som listas här är inte på något vis de enda
 frekvenser som scouter använder.
 
+\clearpage
+
 \subsection{Marina MF/HF-frekvenser}
 
 De marina HF-banden är uppdelade på ett antal band. Det finns en
@@ -347,12 +350,12 @@ används i Sverige.
 \textbf{Kanal} & \textbf{Placering} & \textbf{Skepp} & \textbf{Kust}  \\ \hline
 \endhead
 
-MF1 & Gotland       & 2 099 & 1 6874 \\
+MF1 & Gotland       & 2\,099 & 1\,6874 \\
 MF2 & ---           & ---  & ---   \\
-MF3 & Gislövshammar & 2 060 & 1 797  \\
-MF4 & Härnösand     & 2 216 & 2 733  \\
-MF5 & Bjuröklubb    & 2 123 & 1 779  \\
-MF6 & Grimeton      & 2 135 & 1 710
+MF3 & Gislövshammar & 2\,060 & 1\,797  \\
+MF4 & Härnösand     & 2\,216 & 2\,733  \\
+MF5 & Bjuröklubb    & 2\,123 & 1\,779  \\
+MF6 & Grimeton      & 2\,135 & 1\,710
 \end{longtable}
 
 \subsubsection{Nödfrekvenser}
