--- a/tex/body-vhf.tex
+++ b/tex/body-vhf.tex
@@ -497,7 +497,6 @@ M & 1240,000 & 25 & -6000 \\
 	51,740 &      F74 &       & 51,990 &     RF99 &
 \end{longtable}
 
-\clearpage
 \subsubsection{FM-kanaler 2m-bandet}
 
 \begin{longtable}{rrl|rrl}
@@ -538,7 +537,7 @@ simplexkanalerna hade inte så stor spridning i Sverige men förekom
 rikligt t.ex. i Tyskland med S20 som anropsfrekvens (eller
 aktivitetscenter som det numera kallas).
 
-\clearpage
+
 \subsubsection{FM-kanaler 70cm-bandet}
 
 \begin{longtable}{rrl|rrl}
@@ -573,7 +572,6 @@ aktivitetscenter som det numera kallas).
 
 \end{longtable}
 
-\clearpage
 \begin{longtable}{rrl|rrl}
 \textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm}
 &  \textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} \\ \hline
@@ -606,6 +604,8 @@ körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000
 \cdot 3 = 432,000$\,MHz och $144,025 \cdot 3 = 432,075$\,MHz varför
 man till och med hade bredare kanalraster de-facto.
 
+
+\clearpage %%% Layout
 
 \subsection{Scouters frekvenser, JOTA}
 
