--- a/tex/body-vhf.tex
+++ b/tex/body-vhf.tex
@@ -11,6 +11,7 @@ själv kontrollera bestämmelserna innan en frekvens brukas.
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
 \subsubsection{Jaktfrekvenser 31 MHz}
+% Frekvenser uppdaterade 250428
 
 Frekvenserna på detta band var tidigare till för enbart jakt. I dag är
 de öppna för övrig landmobil trafik och kan nyttjas till
@@ -258,7 +259,7 @@ liknande. På dessa arbetskanaler sänder man även ut sjörapporter,
 navigationsvarningar och annan information t.ex. säkerhetsvarningar
 som är viktiga för sjöfarten.
 
-\subsubsection{Kanalnummer och frekvens maritima kanaler}
+\subsubsection{Kanalnummer och frekvens marina VHF-kanaler}
 
 \begin{table}[H]
 \centering
@@ -334,6 +335,8 @@ AIS2 & 162,025 & Digital trafik, transponder\\
 \end{longtable}
 
 \subsubsection{Stockholm radio}
+% Frekvenser kontrollerade 250428
+% Ett antal felaktigheter fixade
 
 Radiohorisonten är beräknad i nautiska mil, skeppet lägger till sin egen radiohorisont för att bestämma om det går att nå kuststationen eller ej.
 
@@ -609,12 +612,11 @@ man till och med hade bredare kanalraster de-facto.
 
 \subsection{Scouters frekvenser, JOTA}
 
-Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The
-  Air, JOTA}, förekommer några gånger per år. Här är en
-sammanställning av de standardfrekvenser scouter nyttjar om de inte
-kör repeatrar eller leta upp motstationer själva. Scouter kan antingen
-ha egna signaler, köra under tillfälliga signaler eller vara second
-operator åt med någon klubbsignal.
+Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The Air, JOTA},
+förekommer några gånger per år. Här är en sammanställning av de
+standardfrekvenser scouter nyttjar om de inte kör repeatrar eller leta upp
+motstationer själva. Scouter kan antingen ha egna signaler, köra under
+tillfälliga signaler eller vara second operator åt med någon klubbsignal.
 
 \subsection{Nordiska scoutfrekvenser VHF}
 
@@ -627,19 +629,18 @@ operator åt med någon klubbsignal.
 \end{tabular}
 \end{center}
 
-Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober
-varje år. Jotan startar officiellt vid invigningen på lördag förmiddag
-och slutar natten till måndagen klockan 00:00. Många börjar redan på
-fredagskvällen och avslutar på söndagseftermiddagen.
+Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje år.
+Jotan startar officiellt vid invigningen på lördag förmiddag och slutar natten
+till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslutar
+på söndagseftermiddagen.
 
-Sändningar under denna tid förekommer från ocertifierade scouter som
-lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar
-enskilda sändaramatörer ut sina signaler.
+Sändningar under denna tid förekommer från ocertifierade scouter som lånar
+klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda
+sändaramatörer ut sina signaler.
 
-Sändningarna skall dock alltid ske under direkt överinseende av en
-radioamatör men var beredd på att det kommer vara en viss ovana och
-ske en del misstag.  Strunta i det och ge scouterna en kul
-radioupplevelse.
+Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör
+men var beredd på att det kommer vara en viss ovana och ske en del misstag.
+Strunta i det och ge scouterna en kul radioupplevelse.
 
 \input{tex/radioberakningar-vhf.tex}
 
