--- a/rhb-full.tex
+++ b/rhb-full.tex
@@ -5,10 +5,11 @@
 
 \input{tex/init-1st}
 \input{tex/rhb-forord}
-\input{tex/amatorradiocertifikat}
-\input{tex/body}
-\input{tex/body-vhf}
-\input{tex/body-hf}
+
+\input{tex/kap-reglemente}
+\input{tex/kap-trafik}
+\input{tex/kap-teknik}
+\input{tex/kap-frekvenser}
 
 %\input{logbook}
 
