--- a/rhb-full.tex
+++ b/rhb-full.tex
@@ -10,6 +10,7 @@
 \newcommand{\DokVersion}{2.3.0}
 \newcommand{\DokYear}{2025}
 \newcommand{\DokumentDatum}{\today}
+\newcommand{\ISBN}{ISBN: ej definierad}
 \newcommand{\Linkhome}{www.sikvall.se}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[10pt,swedish,a4paper]{report} % De viktigaste inställningarna för dokumentet
@@ -45,7 +46,7 @@
 \headheight=20pt
 \begin{document}
 
-\newgeometry{left=2cm,right=2cm,bottom=1cm,top=1cm}
+%\newgeometry{left=2cm,right=2cm,bottom=1cm,top=1cm}
 \pagestyle{empty}
 \vfill
 \vspace*{4cm}
@@ -56,9 +57,7 @@
 \end{flushright}
 
 \vfill
-
 \listoftodos
-
 \vfill
 
 Version: \DokVersion\ \hfill \Initialer \hfill Datum: \DokumentDatum
