--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -1,3 +1,12 @@
+\chapter{Reglemente}
+
+I sverige regleras radioanvändningen av Post- och telestyrelsens (PTS)
+bestämmelser och det gäller all radioanvändning. Delar av detta delegeras
+sedan till olika myndigheter exempelvis för marin radio och flygradio. Själva
+utrustningen som får användas för olika typer av radiosändning regleras i
+radioutrustningslagen SFS 2916:392 och det övergripande EU-direktivet
+2014/53/EU.
+
 \section{Tillståndsfri radio}
 
 Det är i undantagsföreskriften du hittar alla villkor som hänger samman med
@@ -21,45 +30,45 @@ som:
  \item ... och mycket mer.
 \end{itemize}
 
-En sak som är intressant är att amatörradio behandlas också i samma skrift trots
-det kräver ett godkänt avlagt prov som leder till ett amatörradiocertifikat.
-Tidigare reglerades amatörradio separat på Televerkets tid i en
-författningssamling som kallades för Televerket B:90. Denna har dock helt
-ersatts av bestämmelserna i undantagsföreskriften.
+En sak som är intressant är att amatörradio behandlas också i samma skrift
+trots det kräver ett godkänt avlagt prov som leder till ett
+amatörradiocertifikat. Tidigare reglerades amatörradio separat på Televerkets
+tid i en författningssamling som kallades för Televerket B:90. Denna har dock
+helt ersatts av bestämmelserna i undantagsföreskriften.
 
 Däremot krävs det numera inget särskilt tillstånd som det gjorde tidigare för
 att få använda amatörradio, annat än att den som opererar radioutrustningen
 skall ha, eller stå under uppsikt av, en person med giltigt
 amatörradiocertifikat.
 
-\subsection{Undantag från tillståndsplikt}
+\section{Undantag från tillståndsplikt}
 
-I sverige regleras all radioanvändning med sändare som inte kräver att man söker
-tillstånd för det i en skrift som ges ut av Post- och Telestyrelsen (PTS) och
-som bär namnet "Untandag från tillståndsplikt". Denna skrift uppdateras lite då
-och då när det finns behov av det och här regleras all radiotrafik som inte
-kräver särskilt tillstånd.
+I sverige regleras all radioanvändning med sändare som inte kräver att man
+söker tillstånd för det i en skrift som ges ut av Post- och Telestyrelsen
+(PTS) och som bär namnet "Untandag från tillståndsplikt". Denna skrift
+uppdateras lite då och då när det finns behov av det och här regleras all
+radiotrafik som inte kräver särskilt tillstånd.
 
-\subsubsection{Banden som omfattas}
+\subsection{Banden som omfattas}
 
-Detta gäller då PR-radio, 69 MHz radio, PMR-bandet på 446 MHz och 444 MHz som
-ofta används på byggen eller säkerhetsarrangemang för arenor med mera liksom
-Jakt- och jordbruksfrekvenserna på 31 och 155 MHz med mera. Inget av dessa band
-kräver licens eller tillstånd men det krävs att man följer reglerna i hänseende
-till vad bandet är tänkt att användas till.
+Detta gäller då PR-radio, 69 MHz radio, PMR-bandet på 446 MHz och KDR-bandet
+på 444 MHz som ofta används på byggen eller säkerhetsarrangemang för arenor
+med mera liksom Jakt- och jordbruksfrekvenserna på 31 och 155 MHz med mera.
+Inget av dessa band kräver licens eller tillstånd men det krävs att man följer
+reglerna i hänseende till vad bandet är tänkt att användas till.
 
 Det finns också en rad med andra tillämpningar som går under detta dokument från
 tekniska och medicinska och mycket mer. Det rekommenderas att skumma igenom
 dokumentet då det faktiskt är ganska intressant.
 
-\subsubsection{Endast godkända radioapparater}
+\subsection{Endast godkända radioapparater}
 
 Radioapparaterna måste ochså vara godkända och CE-märkta för att man ska
 uppfylla villkoren och här blir det ofta en del problem med gråimporterade
 radioapparater från asien som ibland kan ha förskräckligt dåliga sändare. Det är
 straffbart att använda icke godkänd radioutrustning.
 
-\subsection{Amatörradiocertifikat}
+\section{Amatörradiocertifikat}
 
 Amatörradio har en lång historia och sträcker sig tillbaka till radions
 barndom. Rent formellt så var det i USA i slutet av 1890-talet som radioamatörer
@@ -69,7 +78,7 @@ blev mycket populärt bland elingenjörer och andra teknikintresserade och runt
 för att formalisera det hela. Olika restriktioner infördes men i och med detta
 regelverk fick vi också vissa krav på kunskaper för att operera radiosändare.
 
-\subsubsection{Amatörradiocertifikat HAREC}
+\subsection{Amatörradiocertifikat HAREC}
 
 Om det fulla amatörradiocertifikatet är ett certifikat som är utformat efter de
 principer som anges i HAREC T/R 61-02, Harmonised Amateur Radio Examination
@@ -90,7 +99,7 @@ Ett godkänt sådant prov ger möjlighet att operera som radioamatör på
 en stor mängd olika frekvensband, alla de som i Sverige är utmärkta
 som amatörradioband.
 
-\subsubsection{Amatörradiocertifikat insteg}
+\subsection{Amatörradiocertifikat insteg}
 \label{sec:instegscertifikat}
 
 Instegscertifikatet är ett förenklat teknikprov men ungefär samma prov vad
@@ -116,7 +125,7 @@ Radioamatörer med instegscertifikat tilldelas anropssignaler i serien SH som
 även tidigare använts för noviser. Vid uppgradering till fullt cert får man i
 stället en signal i SA-serien är tanken.
 
-\subsubsection{Amatörradioband för instegscertifikat}
+\subsection{Amatörradioband för instegscertifikat}
 
 \begin{table}[H]
 \centering
@@ -143,7 +152,7 @@ med. Arbete fortsätter på att försöka tillföra även 70 cm bandet (432--438
 till de band som är tillåtna för instegsamatörer men det har inte kommit med i
 denna utgåva av PTS undantagsföreskrift.
 
-\subsubsection{Effektrestriktioner instegscertifikat}
+\subsection{Effektrestriktioner instegscertifikat}
 
 På frekvensbanden 7, 14, 21, 28 och 15\,MHz tillåter man 25\,W PEP tillfört
 antennsystemet. Detta är effekten vid en key-down på morsenyckel. Antennvinsten
@@ -159,13 +168,13 @@ med hög förstärkning, eller att bestämma dess faktiska förstärkning på
 kortvågsbanden medan det för 145\,MHz och uppåt är betydligt enklare att få till
 det och dessutom mäta och bestämma antennens förstärkning.
 
-\subsubsection{Restriktioner på utrustning för instegscertifikat}
+\subsection{Restriktioner på utrustning för instegscertifikat}
 
 Som instegsamatör får man inte operera hemmabyggda sändare, modifierade sändare
 eller andra sändare som saknar CE-märkning. Det innebär att man måste hålla sig
 till fabriksbyggd utrustning som säljs på den europeiska marknaden.
 
-\subsubsection{Instegscertifikat utomlands}
+\subsection{Instegscertifikat utomlands}
 
 Certifikatet äger heller ingen giltighet utomlands så som det fulla,
 HAREC-baserade, amatörradiocertifikatet gör. Du får därför i de flesta fall inte
