--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -1174,6 +1174,48 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 
 \normalsize
 
+\section{Begrepp i bandplanerna}
+
+\begin{itemize}
+\item QRP: Aktivitetscentrum för låg effekt ($<$5W), svaga signaler
+      förekommer, visa hänsyn.
+\item QRS: Aktivitetscenter för långsam CW.
+\item QRSS: Extremt långsam CW med dator.
+\item DV: Digital Voice.
+\item Image: Bildmoder exempelvis SSTV och Fax som ryms inom den specificerade
+	  maximala bandbredden.
+\end{itemize}
+
+\section{Trafikregler och tumregler}
+
+\begin{itemize}
+\item Vid SSB-telefoni används LSB på frekvenser under 10 MHz och USB
+      på frekvenser över 10 MHz.
+\item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över
+      under bandkant!
+\item Högsta acceptable inställda frekvens för USB är 3 kHz under
+      övre bandkant!
+\item IBP är International Beacon Project. Fyrarna sänder med 3 min
+      intervaller och används för att studera utbredningen av
+      radiosignaler globalt. Fyrarna sänder anrop och fyra 1 s toner.
+      Anropet och första tonen sänds med 100W, därefter sänds tonerna
+      med 10W, 1W samt 100mW.
+\item Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej fö\-re\-kom\-mer
+      med de sidband som då uppstår, det gäller då både övre och undre
+      sidbandet.
+\item Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras.
+      Lyssna gärna på nödfrekvenserna men används dem icke, om det
+      inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära
+      dessa också.
+\item Var särskilt uppmärksam på satelliters nerlänksfrekvenser på 10\,m-bandet.
+      I detta segment skall endast lyssning ske. Ingen sändning är
+      tillåten här eller i skyddssegmentet strax ovanför
+      satellitsegmentet. Tänk på att satelliters frekvens kan
+      dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
+\end{itemize}
+
+
+\section{Bandplaner}
 
 \scriptsize
 \subsection{Bandplaner VHF--UHF}
