--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -115,7 +115,7 @@ PTS förväntas delegera examineringen till SSA och deras utsedda provförrätta
 och en särskild utbildningbok för instegscertet håller på att tas fram just nu
 och ska snart gå till tryck (Mars 2025).
 
-Tyvärr fick inte SSA gehör för sin remiss att även öppna 70 cm bandet för
+Tyvärr fick inte SSA gehör för sin remiss att även öppna 70\,cm bandet för
 instegscertifikat. Bandet är inte länge ett exklusivt amatörband men vi delar
 det med lågeffektssändare för fjärrstyrning mm och det bör inte finnas hinder då
 fullcertare får sända med 200\,W i bandet och kan söka högeffektstillstånd på
