--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -1,6 +1,6 @@
-\section{Teknik}
+\chapter{Teknik}
 
-\subsection{Effekt i dBW och dBm}
+\section{Effekt i dBW och dBm}
 
 Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller
 relaterat 1W (dBW). Tabell över effekt och decibelwatt nedan:
@@ -19,7 +19,7 @@ relaterat 1W (dBW). Tabell över effekt och decibelwatt nedan:
 \caption{Tabell över effekt och decibelskalor}
 \end{table}
 
-\subsection{S-värden, signalvärde, S-meter}
+\section{S-värden, signalvärde, S-meter}
 
 Signalstyrkan i amatörradio uttrycks oftast som S-värden. Dessa fås i regel
 genom nivån på AGC hos mottagaren. Därför ser man sälla utslag vid riktigt
@@ -51,9 +51,9 @@ Standard kalibrering för S-metern är enligt skalan i tabellen
 \label{tab:s-varden}
 \end{table}
 
-\subsection{Modulationer}
+\section{Modulationer}
 
-\subsubsection{Bandbredd olika modulationer}
+\subsection{Bandbredd olika modulationer}
 
 Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå
 när man ställer in sin radiostation. Detta gäller särskilt att beakta i närheten
@@ -93,7 +93,7 @@ som en följd av att man vill öka sin modulationsvinst, okunskap eller man har
 skruvat i sin radio. Syftet kan var att få bättre genomslag vid långväga
 förbindelser.
 
-\subsubsection{Telegrafi, CW}
+\subsection{Telegrafi, CW}
 
 CW står för continuous waves och innebär en rent omodulerad bärvåg. I mottagaren
 används en oscillator för att återskapa hörbar signal. Detta används för
@@ -110,7 +110,7 @@ egentligen inte betyder så mycker samt stig- respektive falltiden när man
 nycklar eller släpper nyckeln. Sker detta mjukt är bandbredden låg, har man
 skarp in- eller urkoppling av bärvågen nyttjar man mer bandbredd.
 
-\subsubsection{Amplitudmodulering, AM}
+\subsection{Amplitudmodulering, AM}
 
 Amplitudmodulering finns i flera olika varianter. Vanlig AM består av en
 bärvåg vars styrka varieras i takt med signalen som skall sändas. Denna
@@ -128,7 +128,7 @@ $$B=2f_m$$
 
 Där $f_m$ är högsta modulationsfrekvensen.
 
-\subsubsection{SSB/ESB -- Enkelt sidband, en AM-variant}
+\subsection{SSB/ESB -- Enkelt sidband, en AM-variant}
 
 Enkelt sidband används av radioamatörer för att minska på bandbredden samt
 lägga radioenergin där den behövs mest. Eftersom båda sidbanden innehåller
@@ -156,7 +156,7 @@ $$B=f_m$$
 
 Där $f_m$ är högsta modulationsfrekvensen.
 
-\subsubsection{Frekvensmodulering, FM}
+\subsection{Frekvensmodulering, FM}
 
 Frekvensmodulering består av att man tar en bärvåg och modulerar den med talet
 genom att skifta dess frekvens. Om skiftet i frekvens är mycket litet kallas
@@ -197,7 +197,7 @@ Deviation & Modulation & Bandbredd & Kanaldelning\\ \hline
 \end{tabular}
 \end{center}
 
-\subsection{Termiska brusgolvet}
+\section{Termiska brusgolvet}
 När man lyssnar i radion på en frekvens där ingen nyttosignal finns hörs ett
 brus. Detta brus består av olika komponenter men en av de viktigaste är det
 termiska brusgolvet. Detta sätter en nedre gräns för hur svaga signaler en
@@ -259,7 +259,7 @@ märkligt. Det gör att smalbandig kommunikation har ett bättre läge pga lägr
 bruseffekt i mottagaren.
 
 
-\subsection{Return loss och VSWR}
+\section{Return loss och VSWR}
 
 Return loss och VSWR anger samma sak. VSWR är vanligare inom amatörradio medan
 man i profesionella sammanhang föredrar att prata om return loss. RL är
@@ -287,7 +287,7 @@ komponenterna ligger runt 30\,dB. Många antenntuners som går med automatik
 startar avstämningen först när VSWR är 1:2 eller sämre som motsvarar ca
 10\,dB\,RL.
 
-\subsection{CTCSS subtoner}
+\section{CTCSS subtoner}
 
 Inom amatörradio används ofta pilottoner (subtoner) som
 CTCSS\footnote{Contnuous Tone-Conded Squelch System} för repeatrar och
