--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -1,3 +1,7 @@
+\chapter{Trafik}
+
+I detta kapitel tittar vi närmare på hur radiotrafik bedrivs både för amatörradioband och andra band. Här finns också bokstaveringsalfabeten, både det svenska och det internationella, Q-koder och mycket annat som är radio\-trafik\-relaterat.
+
 \section{Signaler och anrop}
 
 \subsection{Landsprefix}
@@ -133,9 +137,6 @@ Det unika för en radioamatörs signal är alltså prefixet + suffixet, som exem
 är identifieraren för SM0UEI prefixet SM och suffixet UEI eftersom
 distriktsiffran kan ändra sig.
 
-\clearpage
-
-
 \section{Terminologi och trafik}
 
 \subsection{Bokstaveringsalfabetet (Svenska)}
@@ -270,7 +271,7 @@ grader per fält latitud. Varje sådant fält delas sedan in i 10x10 rutor som
 numreras 0-9 på vardera axeln. Dessa i sin tur delas sedan in i 24x24 smårutor
 som då får storleksordningen 2.5 grader latitud och 5 grader long. vardera.
 
-\subsection{Uppträdande}
+\section{Uppträdande}
 
 När vi kör amatörradio finns det ett antal saker att tänka på som har att göra
 med hur vi beter oss mot varandra på banden. Se detta som en guide till hur man
@@ -337,7 +338,7 @@ till en vana att lämna luckor så ofta som möjligt.
 \textbf{Nödtrafik har alltid prioritet} och måste respekteras på alla
 frekvenser.
 
-\subsection{Repeatrar}
+\section{Repeatrar}
 
 Repeatrars syfte är främst att förlänga kommunikationen från mobila och portabla
 amatörsändare. Samtal mellan fasta stationer förekommer men om ni hör varandra
@@ -355,7 +356,7 @@ repeatern och har satt upp den i första hand för att supporta mobila stationer
 
 Nödtrafik har alltid prioritet.
 
-\subsection{QSO}
+\section{QSO}
 
 Konsten att genomföra ett radiosamtal (QSO) i olika sammanhang. Ofta blir folk
 nervösa i början för hur detta går till. Man säger sin signal och motstationens
@@ -377,7 +378,7 @@ När man kör FM över repeatrar på VHF/UHF är det inte lika vanligt att man b
 skall regelbundet upprepa signalerna och i praktiken är det lämpligt att göra
 kanske var femte minut eller oftare.
 
-\subsubsection{Anropet}
+\subsection{Anropet}
 
 Ett anrop kan se ut ungefär såhär:
 
@@ -389,7 +390,7 @@ Ett anrop kan se ut ungefär såhär:
 
 Därefter övergår radiosamtalet i dialog eller meddelandesändning.
 
-\subsubsection{Allmänt anrop}
+\subsection{Allmänt anrop}
 
 Används när man inte ropar på någon särskild motstation utan önskar samtal med
 vem som helst. På svenska använder man ofta just orden ''allmänt anrop'' medan
@@ -403,7 +404,7 @@ Eller på engelska:
 
 -- CQ CQ CQ this is SMØUEI calling CQ CQ CQ and standing by.
 
-\subsubsection{Meddelandesändning}
+\subsection{Meddelandesändning}
 
 -- SA0MAD från SM0UEI, tack för svaret. Din signal är 59 hos mig, mitt QTH är
 JO89WA och namnet är Anders. SA0MAD från SM0UEI kom.
@@ -414,13 +415,13 @@ på 3663 kHz. QSL? SM0UEI från SA0MAD.
 
 -- SA0MAD från SM0UEI, QSL på det, QRX 19.30 på frekvens 3663 kHz.
 
-\subsubsection{Avslutning}
+\subsection{Avslutning}
 
 -- SA0MAD från SM0UEI, tack för rapport och vi hörs senare, 73, slut kom
 
 -- SM0UEI från SA0MAD, 73 tillbaka, klart slut.
 
-\subsubsection{Pile-up och tävling}
+\subsection{Pile-up och tävling}
 
 Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu
 gäller det att spetsa öronen! Först gäller det att sålla. Rara
@@ -497,50 +498,5 @@ sänd sedan!
 
 \clearpage
 
-\section{Trafik- och tumregler HF}
-\subsection{Kort sammanfattning av reglemente}
-
-OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast
-sammanfattning av några viktiga punkter.
-
-\subsubsection{Begrepp i bandplanerna}
-
-\begin{itemize}
-\item QRP: Aktivitetscentrum för låg effekt ($<$5W), svaga signaler
-      förekommer, visa hänsyn.
-\item QRS: Aktivitetscenter för långsam CW.
-\item QRSS: Extremt långsam CW med dator.
-\item DV: Digital Voice.
-\item Image: Bildmoder exempelvis SSTV och Fax som ryms inom den specificerade
-	  maximala bandbredden.
-\end{itemize}
-
-\subsubsection{Trafikregler och tumregler}
-
-\begin{itemize}
-\item Vid SSB-telefoni används LSB på frekvenser under 10 MHz och USB
-      på frekvenser över 10 MHz.
-\item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över
-      under bandkant!
-\item Högsta acceptable inställda frekvens för USB är 3 kHz under
-      övre bandkant!
-\item IBP är International Beacon Project. Fyrarna sänder med 3 min
-      intervaller och används för att studera utbredningen av
-      radiosignaler globalt. Fyrarna sänder anrop och fyra 1 s toner.
-      Anropet och första tonen sänds med 100W, därefter sänds tonerna
-      med 10W, 1W samt 100mW.
-\item Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej fö\-re\-kom\-mer
-      med de sidband som då uppstår, det gäller då både övre och undre
-      sidbandet.
-\item Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras.
-      Lyssna gärna på nödfrekvenserna men används dem icke, om det
-      inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära
-      dessa också.
-\item Var särskilt uppmärksam på satelliters nerlänksfrekvenser på 10\,m-bandet.
-      I detta segment skall endast lyssning ske. Ingen sändning är
-      tillåten här eller i skyddssegmentet strax ovanför
-      satellitsegmentet. Tänk på att satelliters frekvens kan
-      dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
-\end{itemize}
 
 
